[gd_scene load_steps=4 format=3 uid="uid://d2ogxlgh4nave"]

[ext_resource type="Script" uid="uid://b02g7fv336sih" path="res://scripts/Login.gd" id="1_yvufr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qsj5"]
bg_color = Color(0.121569, 0.121569, 0.14902, 0.941176)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.639216, 0.909804, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgjxf"]
bg_color = Color(0, 0.639216, 0.909804, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvufr")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginPanel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 450)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7qsj5")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/LoginPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.639216, 0.909804, 1)
theme_override_font_sizes/font_size = 32
text = "CYBERRUNNER"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.733333, 0.733333, 0.733333, 1)
theme_override_font_sizes/font_size = 14
text = "A NETRUNNER-INSPIRED ROGUELIKE"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/LoginPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="CenterContainer/LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.686275, 0.686275, 0.686275, 1)
text = "USERNAME"
horizontal_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="CenterContainer/LoginPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(300, 40)
placeholder_text = "Enter your handle..."
alignment = 1
max_length = 20

[node name="FactionLabel" type="Label" parent="CenterContainer/LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.686275, 0.686275, 0.686275, 1)
text = "CHOOSE YOUR FACTION"
horizontal_alignment = 1

[node name="FactionButtons" type="HBoxContainer" parent="CenterContainer/LoginPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CorpButton" type="Button" parent="CenterContainer/LoginPanel/VBoxContainer/FactionButtons"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
text = "CORPORATION"

[node name="RunnerButton" type="Button" parent="CenterContainer/LoginPanel/VBoxContainer/FactionButtons"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
text = "RUNNER"

[node name="Spacer2" type="Control" parent="CenterContainer/LoginPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ConnectButton" type="Button" parent="CenterContainer/LoginPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_rgjxf")
disabled = true
text = "CONNECT"

[node name="ErrorLabel" type="Label" parent="CenterContainer/LoginPanel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.392157, 0.392157, 1)
text = "Error message here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VersionLabel" type="Label" parent="CenterContainer/LoginPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "v0.1.0 Alpha"
horizontal_alignment = 1
